# statviz

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  run.sh  vcpkg.json
src/: main.cpp
src/app/: Camera.cpp  Camera.hpp  Grid.cpp  Grid.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  UI.cpp  UI.hpp
src/common/: Config.hpp
src/shaders/: display.frag  fullscreen.vert  grid.frag  grid.vert  raymarch.frag  sample.comp
tests/: CMakeLists.txt  test_camera.cpp  test_normalization.cpp  test_sampling.cpp
